<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/copa_do_mundo_fifa_2014"
            android:textAlignment="center"
            android:textColor="#002776"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGols"
            app:srcCompat="@drawable/copa" />

        <Button
            android:id="@+id/buttonGols"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:onClick="onClickEstatisticas"
            android:text="@string/estatisticas"
            android:textColor="#002776"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelecoes"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonSelecoes"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:onClick="onClickSelecoes"
            android:text="@string/selecoes"
            android:textColor="#002776"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCidades"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonCidades"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:onClick="onClickCidades"
            android:text="@string/cidades"
            android:textColor="#002776"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonJogos"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonJogos"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:onClick="onClickJogos"
            android:text="@string/jogos"
            android:textAlignment="center"
            android:textColor="#002776"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>